--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ networkx>=2.6.0
 igraph>=0.10.0
 leidenalg>=0.9.0
 scikit-learn>=1.0.0
+matplotlib>=3.5.0
+pandas>=1.4.0
+seaborn>=0.12.0
+pytest>=7.0.0
